--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react": "^17.0.2",
     "react-apexcharts": "^1.4.0",
     "react-calendar": "^3.7.0",
+    "react-csv": "^2.2.2",
     "react-custom-scrollbars-2": "^4.2.1",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "17.0.2",
     "react-dropzone": "^12.0.4",
     "react-icons": "^4.3.1",
