--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^4.3.1",
     "react-is": "^18.0.0",
     "react-table": "^7.8.0",
+    "styled-components": "^5.3.6",
     "stylis": "^4.1.1",
     "stylis-plugin-rtl": "2.0.2",
     "swr": "^2.0.0",
